--- a/TPMetodosAgiles/src/main/java/Presentacion/AltaTitular.form
+++ b/TPMetodosAgiles/src/main/java/Presentacion/AltaTitular.form
@@ -405,7 +405,7 @@
           <Properties>
             <Property name="toolTipText" type="java.lang.String" value="Ingrese como maximo 2 nombres"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Cursor Por defecto"/>
+              <Color id="Default Cursor"/>
             </Property>
           </Properties>
         </Component>
